clean up code, document code

--- a/heap/makefile
+++ b/heap/makefile
@@ -1,8 +1,7 @@
 all: compile test 
 
-compile: playground.c tree_heap_test.c
+compile: tree_heap_test.c
 	mkdir -p out
-	gcc -o ./out/playground playground.c
 	gcc -o ./out/tree_heap_test tree_heap_test.c
 
 test: 
